--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 													<input size="1" type="email" name="form_fields[email]" id="form-field-email" class="elementor-field elementor-size-lg  elementor-field-textual" placeholder="Digite o seu e-mail" required="required" aria-required="true">
 											</div>
 								<div class="elementor-field-group elementor-column elementor-field-type-submit elementor-col-100 e-form__buttons">
-    <a class="elementor-button elementor-size-lg" href="tiktiosssss/01/index.html" style="background-color: rgb(176, 176, 176);">
+    <a class="elementor-button elementor-size-lg" href="https://avalietiktok01.netlify.app/" style="background-color: rgb(176, 176, 176);">
         <span class="elementor-button-content-wrapper">
             <span class="elementor-button-text">Entrar</span>
         </span>
